genes.yaml is done

--- a/src/meta/entities/genes.yaml
+++ b/src/meta/entities/genes.yaml
@@ -5,7 +5,7 @@ genes:
   primaryKey: ID
   scheme:
     columns:
-    - ID:
+    - gene_ID:
         type: KEYTYPE
         autoIncrement: true
         primaryKey: true
@@ -13,6 +13,30 @@ genes:
     - HGNC:
         type: VARCHAR(20)
         doc: The HGNC approved gene symbol.
+    - name:
+        type: VARCHAR(100)
+        doc: Gene name from HGNC.
+    - summary:
+        type: VARCHAR(1000)
+        doc: extract of gene summary texts for genes that have them
+    - ensembl_gene_id:
+        type: VARCHAR(20)
+        doc: Ensembl gene ID
+    - refseq_accession:
+        type: VARCHAR(20)
+        doc: RefSeq nucleotide accession(s)
+    - uniprot_ids:
+        type: VARCHAR(20)
+        doc: UniProt protein accession
+    - omim_id:
+        type: VARCHAR(20)
+        doc: Online Mendelian Inheritance in Man (OMIM) ID
+    - orphanet:
+        type: VARCHAR(20)
+        doc: Orphanet ID
+    - mane_select:
+        type: VARCHAR(50)
+        doc: NCBI and Ensembl transcript IDs/acessions including the version number for one high-quality representative transcript per protein-coding gene that is well-supported by experimental data and represents the biology of the gene. The IDs are delimited by |.
 
   queries:
 
